@@ -12,7 +12,7 @@ param(
 $java = find-tool("java")
 
 & $java `
-  -D"foreign.restricted=permit" `
+  --enable-native-access=ALL-UNNAMED `
   --add-modules jdk.incubator.foreign `
   -D"java.library.path=$libgit2path\bin" `
   GitClone.java `
